<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:backgroundTint="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <TableRow
        android:background="@android:drawable/btn_star"
        android:backgroundTint="@color/colorAccent">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:background="@android:color/background_dark"
            android:text="@string/title_string"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#B7E661"
            android:textSize="36sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/teamA_textview"
            android:layout_width=""
            android:layout_height="90dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/teamA_title_string"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="112dp" />

        <TextView
            android:id="@+id/teamA_score_textview"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:background="#FFC107"
            android:text="10"
            android:textAlignment="center"
            android:textColor="#0B25E2"
            android:textSize="28sp"
            tools:layout_editor_absoluteX="63dp"
            tools:layout_editor_absoluteY="186dp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/increase_TeamA_Button3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="#4F7AA7"
            android:text="@string/increase_string"
            android:textColor="#F3F0F0"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="267dp" />

        <Button
            android:id="@+id/decrease_TeamA_Button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="#8BC34A"
            android:text="@string/decrease_string"
            android:textColor="#FDFCFC"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="362dp" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/teamB_textview"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:background="#75633C3C"
            android:shadowColor="#3F51B5"
            android:text="@string/teamB_title_string"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#14C917"
            android:textSize="32sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="263dp"
            tools:layout_editor_absoluteY="112dp" />

        <TextView
            android:id="@+id/teamB_score_textview"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:background="#29BACC"
            android:text="10"
            android:textAlignment="center"
            android:textSize="28sp"
            tools:layout_editor_absoluteX="294dp"
            tools:layout_editor_absoluteY="186dp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/increase_TeamB_Button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="#17E7CD"
            android:text="@string/increase_string"
            android:textColor="#FD1267E6"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="271dp"
            tools:layout_editor_absoluteY="267dp" />

        <Button
            android:id="@+id/decrease_TeamB_Button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@android:drawable/alert_dark_frame"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/decrease_string"
            android:textColor="#00695C"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="271dp"
            tools:layout_editor_absoluteY="362dp" />
    </TableRow>


    <RadioGroup
        android:id="@+id/roundingRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RadioButton
        android:id="@+id/noRoundingRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:checked="true"
        android:text="@string/incBy1"
        android:textSize="36sp" />

    <RadioButton
        android:id="@+id/noRoundingRadioButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#1F1616"
        android:button="@drawable/ic_launcher_foreground"
        android:fontFamily="casual"
        android:text="@string/incBy2"
        android:textColor="#D1660E"
        android:textSize="36sp" />

    <RadioButton
        android:id="@+id/noRoundingRadioButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:button="@android:drawable/btn_star_big_on"
        android:fontFamily="cursive"
        android:text="@string/incBy3"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TableLayout
        android:layout_width="30dp"
        android:layout_height="12dp"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="46dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</TableLayout>